<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Base.CardView"
    app:cardCornerRadius="14dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/guidomia_dark_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/make_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:paddingStart="15dp"
            android:background="@drawable/edit_text_drawable"
            android:textColorHint="@color/guidomia_dark_gray"
            android:hint="@string/any_make"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/filter_title"/>

        <EditText
            android:id="@+id/model_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintCircleRadius="14dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:paddingStart="15dp"
            android:background="@drawable/edit_text_drawable"
            android:textColorHint="@color/guidomia_dark_gray"
            android:hint="@string/any_model"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/make_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
