<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/guidomia_light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/row_image_view"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/alpine_roadster" />

        <TextView
            android:id="@+id/car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/car_name"
            android:textColor="@color/guidomia_dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/row_image_view"
            app:layout_constraintTop_toTopOf="@+id/row_image_view" />

        <TextView
            android:id="@+id/car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/car_price"
            android:textColor="@color/guidomia_dark_gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/row_image_view"
            app:layout_constraintTop_toBottomOf="@+id/car_name" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginVertical="10dp"
            android:numStars="5"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toEndOf="@+id/row_image_view"
            app:layout_constraintTop_toBottomOf="@+id/car_price" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nestedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_image_view">

            <TextView
                android:id="@+id/pros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car_pros"
                android:textColor="@color/guidomia_dark_gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pros_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pros"
                tools:listitem="@layout/nested_row_item" />

            <TextView
                android:id="@+id/cons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car_cons"
                android:textColor="@color/guidomia_dark_gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pros_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cons_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cons" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/guidomia_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>